sidebar no longer shrinks smaller than icon width; header now wraps when squished to small; removed min-width from #main

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -22,6 +22,7 @@ body
   background: #f2f2f2
   display: flex
   flex-direction: column
+  overflow-x: hidden
 
   transition: background 1s ease
 
@@ -75,7 +76,6 @@ h1
   flex: 1
   display: flex
   flex-direction: column
-  min-width: 600px
 
   padding: 0 2% 0 12px
   white-space: nowrap
