--- a/app/assets/stylesheets/sidebar.sass
+++ b/app/assets/stylesheets/sidebar.sass
@@ -1,7 +1,4 @@
 #sidebar
-
-
-#sidebar
   vertical-align: top
   padding: 6px
   margin-top: 6px
@@ -12,7 +9,7 @@
   white-space: nowrap
   overflow-y: auto
   overflow-x: hidden
-
+  flex-shrink: 0
 
   transition: all .3s ease-in-out
 
